# hswf

./: .ghci  Args.hs  Binary.hs  LICENSE  Main.hs  Main.in.lhs  Main.lhs  Tests.hs  Utilities.hs  generate.sh  hswf.cabal  swf.cabal
Data/: SWF.hs
Data/SWF/: Format.in.lhs  Format.lhs
Data/SWF/Internal/: Binary.hs  Utilities.hs
examples/: .gitignore
examples/gnash/: LICENSE
examples/spec/: example.swf
generator/: Cleaner.hs  Main.hs
tests/: DefineShapeAlignment.hs  Primitives.hs  Roundtripping.hs  SpecificationExample.hs  TestUtilities.hs  Tests.hs  VanillaRect.hs
